--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@ p{color:#434343;line-height:1.6;}
 <!-- Welcome -->
 <div class="sar-page" data-step="welcome">
 <div class="card" style="margin-top:10px;">
-<h1 style="margin:0 0 2px 0;">BED HOSPITALITY 20.0</h1>
-<div class="small" id="formSubheader">SELF ASSESSMENT FORM</div>
+
+
 <div id="dotbar" style="margin-top:12px; display:flex; gap:10px;">
 <div class="sar-dot done current"></div>
 <div class="sar-dot"></div>
@@ -256,7 +256,7 @@ p{color:#434343;line-height:1.6;}
 </select>
 </div>
 <div style="display:flex;justify-content:flex-end;margin:18px 0 8px;">
-<button class="primary" id="sarStart" style="min-width:120px;">Start</button>
+<button class="primary" id="sarStart">Next</button>
 </div>
 </div>
 <!-- Part 1 — Dynamic questions -->
@@ -726,7 +726,7 @@ function updateHeaderTitle(){
   if(activeTitle){ text = activeTitle.textContent.trim(); }
   const step = sarState.step;
   if(!text){
-    const map = {welcome:'SELF-ASSESSMENT REPORT (SAR)', q1:'STATEMENTS PART 1', q2:'STATEMENTS PART 2', score:'SELF-ASSESSMENT SCORE', peer:'PEER ASSESSMENT', done:'YOU\'RE DONE', finish:'SELF- ASSESSMENT COMPLETED'
+    const map = {welcome:'SELF ASSESSMENT FORM', q1:'STATEMENTS PART 1', q2:'STATEMENTS PART 2', score:'SELF-ASSESSMENT SCORE', peer:'PEER ASSESSMENT', done:'YOU\'RE DONE', finish:'SELF- ASSESSMENT COMPLETED'
 };
     text = map[step] || '';
   }
@@ -1716,5 +1716,37 @@ ok.onclick = function(){
   window.savePdfNow = savePdfNow;
 })();
 </script>
-</body>
+<script>
+(function(){
+  var page = document.querySelector('.sar-page[data-step="welcome"]') || document;
+  var btn = page.querySelector('#sarStart');
+  if (!btn) return;
+  // Inputs
+  var name = page.querySelector('#sarNick');
+  var email = page.querySelector('#sarEmail');
+  var hotel = page.querySelector('#sarHotel');
+  function validEmail(v){ return /^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(v||''); }
+  function update(){
+    var ok = true;
+    if (name) ok = ok && name.value.trim().length>0;
+    if (email) ok = ok && validEmail(email.value.trim());
+    if (hotel) ok = ok && hotel.value && hotel.value !== '';
+    btn.disabled = !ok;
+  }
+  ['input','change'].forEach(function(evt){
+    if (name) name.addEventListener(evt, update);
+    if (email) email.addEventListener(evt, update);
+    if (hotel) hotel.addEventListener(evt, update);
+  });
+  // initial state
+  update();
+  // Click -> go to next step if any JS router exists, else just allow form submit
+  btn.addEventListener('click', function(e){
+    // If a global App router exists, move to intro
+    if (window.BED && window.BED.App && typeof window.BED.App.go === 'function'){
+      e.preventDefault();
+      window.BED.App.go('intro');
+    }
+  });
+})();</script></body>
 </html>
