--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ p{color:#434343;line-height:1.6;}
 </select>
 </div>
 <div class="card" style="margin-top:16px;">
-<h2 class="section-title">PEER INFORMATION</h2>
+<h2 class="section-title">PEER INFORMATION</h2><div class="peer-subtext" style="font-size:11pt;color:#666;margin-top:4px;margin-bottom:12px;">the person that will review you must have been in BED for at least 12 months</div>
 <label class="small field-label">name of your peer reviewer</label>
 <input id="peerName" placeholder="nick name" style="width:100%;padding:10px;border:1px solid #ccc;border-radius:8px;margin:6px 0 12px;" type="text"/>
 <label class="small field-label">email address of your peer reviewer</label>
